# stock-test

poetry-demo/: pyproject.toml
poetry-demo/stocks/: stocks.py
