[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["machstat <heidimach.96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.5.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[theme]
primaryColor="#F63366"
backgroundColor="#FFFFFF"
secondaryBackgroundColor="#F0F2F6"
textColor="#262730"
font="sans serif"
